tests/baselines/reference/recursiveInferenceBug.errors.txt
tests/cases/compiler/recursiveInferenceBug.ts(9,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.


==== tests/cases/compiler/recursiveInferenceBug.ts (1 errors) ====
    function f(x: number) {
        var z = f(x);
        return x;
    }
    
    
    var zz = {
        g: () =>{ },
        get f() { return "abc"; },
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    };
    